quiz and flashcard overhaul wip